fix: about me spacing

--- a/src/shared/components/AboutMe/DescriptionItem/styles.module.css
+++ b/src/shared/components/AboutMe/DescriptionItem/styles.module.css
@@ -2,7 +2,7 @@
     display: flex;
     gap:12px;
     align-items: center;
-    margin-bottom: 12px;
+    margin-bottom: 24px;
 }
 
 .descriptionItem .icon{
